# ScanningTunnelingElectronMicroscope

Designs/DAC/: DAC.brd
Electronic/DRC_CAM/: ITeadstudio_CAM.cam
Electronic/Designs/ADC/: ADC.brd  ADC.sch
Electronic/Designs/DAC/: DAC.brd  DAC.sch
Electronic/Designs/DAC/Simulation/: .gitignore
Electronic/Designs/DAC2/: DAC2.brd  DAC2.sch
Electronic/Designs/LevelShifter/Simulation/: LevelShifter.asc
Electronic/Designs/PSU/Simulation/: PSU.asc
Electronic/Designs/PiezoDriver/: PiezoDriver.brd  PiezoDriver.sch
Electronic/Designs/PiezoDriver/Simulation/: OPAMPDriveSimulation.asc
Electronic/Designs/TunnelingAmp/: TunnelingAmp.brd  TunnelingAmp.sch
Electronic/Designs/TunnelingAmp/Simulation/: OPA627.MOD  OPA627.asy  TunnelingAmp.asc
Electronic/Parts/: LT1468.lbr  LTC2326-16.lbr  OPA627.lbr  OPA627_FromFarnell.lbr  TDA3664.lbr
Parts/: DAC80004.lbr  LTC2326-16.lbr  OPAX22X.lbr  REF02.lbr
Software/Application/: .gitignore  CMakeLists.txt
Software/Application/app/: CMakeLists.txt  Common.hpp  ConsolePanel.cpp  ConsolePanel.hpp  ControlPanel.cpp  ControlPanel.hpp  DevicePanel.cpp  DevicePanel.hpp  HardwareInterface.hpp  MainWindow.cpp  MainWindow.hpp  ScopeViewer.cpp  ScopeViewer.hpp  StmApp.cpp
Software/Firmware/Firmware/: Firmware.cproj
Software/Firmware/Firmware/src/: DAC80004Driver.c  DAC80004Driver.h  LTC2326Driver.c  LTC2326Driver.h  PIDController.c  PIDController.h  asf.h  main.c
